Bug 1400721 - Fix Skia's glyph LCD filter padding for FreeType 2.8.1. r=jrmuizel, a=lizzard

MozReview-Commit-ID: JFvnANsTS0r

--HG--
extra : source : 9a26478b903485d0f70b7a24fec0a7fe2d0c124f